# collab_industrial_research

./: .gitignore
gz_world_package/: CMakeLists.txt  package.xml
gz_world_package/config/: combined_moveit_controllers.yaml  gz_bridge.yaml  initial_positions.yaml  ur5e_controllers.yaml
gz_world_package/config/camera_models/: final_left_best.pt  final_right_best.pt  final_top_best.pt
gz_world_package/config/skins/DoctorFemaleWalk/: model.sdf
gz_world_package/config/skins/Walkingactor/: model.sdf
gz_world_package/launch/: moveit_launch.py  spawn_all_cameras.launch.py  spawn_all_robots.launch.py  start_gz_sim.launch.py
gz_world_package/meshes/kuka_box/: kuka_box.dae  model.config  model.sdf
gz_world_package/meshes/ur_box/: model.config  model.sdf  ur_box.dae
gz_world_package/models/bookshelf/: model.config  model.sdf
gz_world_package/models/boss_arm_chair/: boss_arm_chair.sdf  model.config
gz_world_package/models/boss_arm_chair/meshes/: boss_arm_chair.stl
gz_world_package/models/materials/scripts/: lirs.material
gz_world_package/models/row_chair/: model.config  row_chair.sdf  row_chair.stl
gz_world_package/models/shelf/: model.config  model.sdf
gz_world_package/models/stand/: model.config  model.sdf
gz_world_package/models/table/: model.config  model.sdf
gz_world_package/scripts/: bridge_coordinator.py  combined_safety_classifier.py  dataset_formatting.py  gui_annotation.py  scrape_top_photos.py  solo_safety_classifier.py  test_bridge.py  test_on_photo.py
gz_world_package/urdf/: combined.urdf
gz_world_package/worlds/: LIRS_corridor.world  big_traj_actor.sdf  robot_cell.sdf  top_traj_actor.sdf
real_case_impl/: CMakeLists.txt  package.xml
real_case_impl/config/: What_should_be_done.txt  kuka_basler.yaml  real_robot_task_sequences.yaml  real_ur_node_list.txt  real_ur_services.txt  real_ur_topics.txt  robot_task_sequences.yaml  sim_robot_task_sequences.yaml  ur_basler.yaml
real_case_impl/launch/: cell_gazebo_bridge.launch.py  cell_real.launch.py  cell_sim.launch.py  operator_gui.launch.py  test_multiple_baslers.launch.py
real_case_impl/real_case_impl/: operator_gui.py  task_executor_core.py
real_case_impl/real_case_impl/common/: __init__.py  adapter.py  constants.py  contracts.py  operator_gui.py  supervisor.py
real_case_impl/real_case_impl/real/: __init__.py  kuka_bridge.py  ur_executor.py
real_case_impl/real_case_impl/sim/: __init__.py  task_executor.py
real_case_impl/scripts/: combined_safety_classifier.py  display_basler_cameras.py  kuka_adapter_node.py  kuka_real_bridge_node.py  kuka_sim_executor_node.py  kuka_task_executor_node.py  operator_gui_app.py  supervisor.py  supervisor_node.py  ur_adapter_node.py  ur_executor_node.py  ur_real_executor_node.py  ur_sim_executor_node.py
